--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.jsx",
   "scripts": {
     "dev": "webpack -d --watch",
-    "build" : "webpack -p"
+    "build": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "express": "^4.15.2",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
