--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "chai": "^3.5.0",
     "enzyme": "^2.8.2",
     "mocha": "^3.3.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^2.3.7",
     "webpack": "^2.4.1"
   }
 }
