testing - fulldom Rendering

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill"
+    "test": "mocha --compilers js:babel-register --require babel-polyfill -r jsdom-global/register"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,8 @@
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "enzyme": "^2.8.2",
+    "jsdom": "11.1.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^3.3.0",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
